; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/crypto/extr_sha256-internal.c_sha256_vector.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/crypto/extr_sha256-internal.c_sha256_vector.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sha256_state = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sha256_vector(i64 %0, i32** %1, i64* %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i32**, align 8
  %8 = alloca i64*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca %struct.sha256_state, align 4
  %11 = alloca i64, align 8
  store i64 %0, i64* %6, align 8
  store i32** %1, i32*** %7, align 8
  store i64* %2, i64** %8, align 8
  store i32* %3, i32** %9, align 8
  %12 = call i64 (...) @TEST_FAIL()
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %4
  store i32 -1, i32* %5, align 4
  br label %43

15:                                               ; preds = %4
  %16 = call i32 @sha256_init(%struct.sha256_state* %10)
  store i64 0, i64* %11, align 8
  br label %17

17:                                               ; preds = %34, %15
  %18 = load i64, i64* %11, align 8
  %19 = load i64, i64* %6, align 8
  %20 = icmp ult i64 %18, %19
  br i1 %20, label %21, label %37

21:                                               ; preds = %17
  %22 = load i32**, i32*** %7, align 8
  %23 = load i64, i64* %11, align 8
  %24 = getelementptr inbounds i32*, i32** %22, i64 %23
  %25 = load i32*, i32** %24, align 8
  %26 = load i64*, i64** %8, align 8
  %27 = load i64, i64* %11, align 8
  %28 = getelementptr inbounds i64, i64* %26, i64 %27
  %29 = load i64, i64* %28, align 8
  %30 = call i64 @sha256_process(%struct.sha256_state* %10, i32* %25, i64 %29)
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %33

32:                                               ; preds = %21
  store i32 -1, i32* %5, align 4
  br label %43

33:                                               ; preds = %21
  br label %34

34:                                               ; preds = %33
  %35 = load i64, i64* %11, align 8
  %36 = add i64 %35, 1
  store i64 %36, i64* %11, align 8
  br label %17

37:                                               ; preds = %17
  %38 = load i32*, i32** %9, align 8
  %39 = call i64 @sha256_done(%struct.sha256_state* %10, i32* %38)
  %40 = icmp ne i64 %39, 0
  br i1 %40, label %41, label %42

41:                                               ; preds = %37
  store i32 -1, i32* %5, align 4
  br label %43

42:                                               ; preds = %37
  store i32 0, i32* %5, align 4
  br label %43

43:                                               ; preds = %42, %41, %32, %14
  %44 = load i32, i32* %5, align 4
  ret i32 %44
}

declare dso_local i64 @TEST_FAIL(...) #1

declare dso_local i32 @sha256_init(%struct.sha256_state*) #1

declare dso_local i64 @sha256_process(%struct.sha256_state*, i32*, i64) #1

declare dso_local i64 @sha256_done(%struct.sha256_state*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
